--- a/DecisionTreeFromScratch.ipynb
+++ b/DecisionTreeFromScratch.ipynb
@@ -929,9 +929,9 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python (AIML)",
    "language": "python",
-   "name": "python3"
+   "name": "aiml"
   },
   "language_info": {
    "name": "python",
